--- a/spring5-profiles/src/main/resources/application-pro.properties
+++ b/spring5-profiles/src/main/resources/application-pro.properties
@@ -3,5 +3,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
